<resources>
    <string name="app_name">CasaForAll</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_image">Image for navigation pane header</string>
    <string name="menu_title_home">Accueil</string>
    <string name="menu_section_sleep_eat_drink">L\'essentiel pour vivre</string>
    <string name="menu_title_hotels">Hotels</string>
    <string name="menu_title_grocery_stores">Supermarché</string>
    <string name="menu_title_restaurants">Restaurants</string>
    <string name="menu_title_cafes">Cafes</string>
    <string name="menu_section_relax_chill_move">Divertissement</string>
    <string name="menu_title_beaches">Plages</string>
    <string name="menu_title_sports">Sports</string>
    <string name="menu_title_leisure_parks">Parc d\'attraction</string>
    <string name="menu_title_events">Evenements et Concerts</string>
    <string name="home_benicassim_me_gusta">Benicassim Me Gusta</string>
    <string name="home_benicassim_playa">Benicassim Playa</string>
    <string name="home_benicassim_columbrete_islands">Columbrete Islands</string>
    <string name="home_benicassim_paella">Paëlla</string>
    <string name="home_benicassim_description_p1">
    Casablanca (ou Ville Blanche), la plus grande ville du Maroc. Capitale économique, elle est située sur la côte Atlantique à environ 80 km au sud de la capitale administrative du pays, Rabat. Troisième ville touristique du Pays,Casablanca vous parle de son passé colonial à travers une partie de son architecture restait intacte. Ville animée, elle connaît aussi un grand nombre d’évènements artistiques et économiques durant toute l’année. Avec ces deux foires internationales d’exposition, Casablanca est  la capitale de l’évènementiel Marocain. Casablanca est une destination contrastée alliant culture et détente, traditions et modernité.  </string>
    <string name="home_benicassim_description_p2">
        À Casablanca tu peux trouver: L\'ancienne médina (Bab Marrakech), le marché central et le Derb Ghallef (un grand marché aux puces) sont quelques-uns des sites les plus pittoresques de la ville blanche.  Le quartier des Habbous ou "nouvelle médina" est connu pour ses boutiques d\'artisanat.  Par un vif contraste, la ville abrite aussi le plus grand centre commercial du Maroc et du Maghreb : le Twin Center Casablanca. Ces deux tours jumelles hautes de 115 mètres rassemblent quelques 130 boutiques sur 3 niveaux. </string>
    <string name="home_benicassim_description_p3">Ne manquez pas de visiter la grande Mosquée Hassan II qui est le joyau de la ville et la Place Mohammed V.</string>
    <string name="location_picture">Picture for location</string>
    <string name="hotel_name_1">Kenzi Basma Hotel</string>
    <string name="hotel_description_1">Hôtel moderne avec vue sur ville, chambres de style décontracté, restaurantbar branché et restaurant buﬀet. Situé à 10 minutes de marche de la station Place des Nations Unies (gare), cet hôtel contemporain se trouve à 2 km de la mosquée Hassan II et à 6 km de la plage Lalla Meryem. Décorées dans des tons neutres, les chambres conviviales disposent d\'un accès Wi-Fi gratuit, d\'une télévision à écran plat, d\'un mini-frigo et d\'un balcon avec vue sur la ville. Les suites en duplex sont dotées d\'un espace de vie séparé. Elles bénéﬁcient également d\'un petit-déjeuner buﬀet gratuit.  </string>
    <string name="hotel_web_1"> www.kenzi-hotels.com/kenzibasma</string>
    <string name="hotel_address_1">Avenue Moulay Hassan 1er, Casablanca 22000 </string>
    <string name="hotel_phone_1">05222-23323</string>
    <string name="hotel_opening_hours_1">24h/24 et 7j/7</string>
    <string name="hotel_name_2">Imperial Casablanca Hotel &amp; Spa</string>
    <string name="hotel_description_2">Chambres et suites modernes dans un hôtel élégant avec restaurant méditerranéen et bar chic. Situé dans un quartier qui regroupe plusieurs bâtiments Art déco, cet élégant hôtel se trouve à 3 minutes à pied de la gare de la Résistance, à 2 km de la cathédrale du Sacré-Cœur et à 3 km de la mosquée Hassan-II, installée au bord de l\'océan. Les chambres modernes et raﬃnées sont dotées d\'un accès Wi-Fi gratuit, d\'une télévision à écran plat, d\'un minibar et d\'un coﬀre-fort. Les suites comprennent en outre un coin salon. </string>
    <string name="hotel_web_2">www.hotelimperialcasablanca.com/</string>
    <string name="hotel_address_2">291, Boulevard Mohamed V &amp; Angle Rue Azilal، Ex Rond Point Shell، Casablanca 20110</string>
    <string name="hotel_phone_2">05223-42729</string>
    <string name="hotel_opening_hours_2"> 24h/ 24 et 7j/7</string>
    <string name="hotel_name_3">Hôtel Atlas Almohades Casablanca </string>
    <string name="hotel_description_3">Chambres raﬃnées dans hôtel élégant avec restaurant, piano-bar et café. Installé dans le centre-ville animé, cet hôtel élégant est situé à 11 minutes à pied des commerces et des restaurants de la place des Nations Unies. Il se trouve par ailleurs à 22 minutes de la Foire Internationale de Casablanca et à 16 minutes de la gare ferroviaire de Casa-Port. Les chambres raﬃnées disposent d\'une connexion Wi-Fi gratuite, d\'une télévision à écran plat, d\'un mini-frigo, d\'un nécessaire à thé et café, ainsi que d\'un coﬀre-fort. Les suites comprennent en outre un coin salon et un balcon avec vue sur la ville. L\'établissement comprend un piano-bar, un café à la carte, un restaurant élégant, un coin salon chaleureux à la réception ainsi qu\'un espace de réunion. </string>
    <string name="hotel_web_3">www.hotelsatlas.com/</string>
    <string name="hotel_address_3">1er, 20000,، Boulevard Moulay Hassan I, Casablanca</string>
    <string name="hotel_phone_3">05222-20505</string>
    <string name="hotel_opening_hours_3"></string>
    <string name="hotel_name_4">Hotel Farah Casablanca </string>
    <string name="hotel_description_4">Hôtel modeste, chambres et suites chaleureuses, petit-déjeuner gratuit, 3 restaurants et piscine extérieure. Les chambres et suites chaleureuses disposent d\'un accès Wi-Fi gratuit, d\'un minibar, de la télévision par satellite, d\'un coﬀre et oﬀrent une vue sur la ville. Les chambres de catégorie supérieure ont vue sur la mer, tandis que les suites possèdent une salle de séjour. Un service de chambre est proposé.Un petit-déjeuner et un parking sont proposés gratuitement. L\'hôtel abrite 3 restaurants, un salon de thé et un salon de jazz/cigares qui sert des sushis et des tapas. Il possède également une piscine extérieure et un centre de ﬁtness. Un service de massage est proposé dans le spa équipé d\'un jacuzzi, d\'un sauna et d\'un hammam. </string>
    <string name="hotel_web_4">www.farahcasablanca.com</string>
    <string name="hotel_address_4">Avenue des FAR, Casablanca </string>
    <string name="hotel_phone_4">05224-58100</string>
    <string name="hotel_opening_hours_4"></string>
    <string name="hotel_name_5">Hôtel Prince De Paris</string>
    <string name="hotel_description_5">Chambres classiques dans un hôtel sobre oﬀrant le petit-déjeuner gratuit, une discothèque animée et un spa. Situé à 5 minutes à pied de la station Place des Nations Unies, cet hôtel simple se trouve à 2 km du parc de la Ligue arabe et à 3 km de la mosquée Hassan II. Agrémentées d\'une décoration rétro, les chambres classiques sont dotées d\'un accès Wi-Fi gratuit, d\'une télévision à écran plat et d\'un minibar. Les suites possèdent également un espace de vie avec un canapé luxueux</string>
    <string name="hotel_web_5">www.princedeparis.com</string>
    <string name="hotel_address_5">24 Boulevard de Paris, Casablanca 20000</string>
    <string name="hotel_phone_5">05225-43567</string>
    <string name="hotel_opening_hours_5"> 24h/24</string>
    <string name="restaurant_name_1">Restaurant Le Basmane Casablanca</string>
    <string name="restaurant_description_1">Chicken Specialities</string>
    <string name="restaurant_web_1">http://www.basmane-restaurant.com/</string>
    <string name="restaurant_address_1">Angle Boulevard de La Corniche et, Boulevard de l\'Océan Atlantique, Casablanca 20180 </string>
    <string name="restaurant_phone_1">05227-97532</string>
    <string name="restaurant_opening_hours_1">MON&#8211;SUN: 11h&#8211;23h00</string>
    <string name="restaurant_name_2">Meson Asador Casablanca</string>
    <string name="restaurant_description_2">Créée par Simo Sajid, chef-propriétaire et gagnant de l\'émission Masterchef Maroc 2015, voici Meson Asador. Vous serez immédiatement séduits par la décoration rustique du lieu et le choix judicieux des clichés qui ornent les murs. Vous serez également totalement conquis par les délicieux mets proposés, typiquement argentins ou des plats signature tels que le tartare bœuf et huîtres. Que ce soit de l\'entrée au dessert, invitant à la découverte de cette magniﬁque destination. Accueil chaleureux et service attentionné ! </string>
    <string name="restaurant_web_2"></string>
    <string name="restaurant_address_2">29 rue Elwouroud، Casablanca 20000</string>
    <string name="restaurant_phone_2">05222-61818</string>
    <string name="restaurant_opening_hours_2">MON&#8211;SUN: 12h&#8211;00h00</string>
    <string name="restaurant_name_3">Restaurant Zayna</string>
    <string name="restaurant_description_3"></string>
    <string name="restaurant_web_3"></string>
    <string name="restaurant_address_3">44 Rue Ibnou Khaldoun, Casablanca 20000 </string>
    <string name="restaurant_phone_3">05225-42596</string>
    <string name="restaurant_opening_hours_3">MON&#8211;SUN: 10h&#8211;1h</string>
    <string name="restaurant_name_4">Don Camillo</string>
    <string name="restaurant_description_4"></string>
    <string name="restaurant_web_4"></string>
    <string name="restaurant_address_4">8 Rue Abou Raqraq, Casablanca 20250</string>
    <string name="restaurant_phone_4">05223-11644</string>
    <string name="restaurant_opening_hours_4">MON&#8211;SUN: 11h30&#8211;1h30</string>
    <string name="restaurant_name_5">Le Relais de Paris</string>
    <string name="restaurant_description_5"></string>
    <string name="restaurant_web_5"></string>
    <string name="restaurant_address_5">Avenue Habib Sinaceur, Casablanca </string>
    <string name="restaurant_phone_5">05223-68796</string>
    <string name="restaurant_opening_hours_5">MON&#8211;SUN: 11h&#8211;00h00</string>
    <string name="restaurant_name_6">Le Bistrot Chic</string>
    <string name="restaurant_description_6"></string>
    <string name="restaurant_web_6"></string>
    <string name="restaurant_address_6">Rue Taha Hussein, Casablanca 20000 </string>
    <string name="restaurant_phone_6">05222-97878</string>
    <string name="restaurant_opening_hours_6">MON&#8211;SUN: 12h&#8211;1h00</string>
    <string name="cafe_name_1">Café Yassir</string>
    <string name="cafe_description_1"></string>
    <string name="cafe_web_1"></string>
    <string name="cafe_address_1">Boulevard Tiflet, Casablanca</string>
    <string name="cafe_phone_1">0669-664568</string>
    <string name="cafe_opening_hours_1">MON&#8211;SUN: 7h30&#8211;23h30</string>
    <string name="cafe_name_2">Jet Set Coffee</string>
    <string name="cafe_description_2"></string>
    <string name="cafe_web_2"></string>
    <string name="cafe_address_2">247 Boulevard de Fes, Casablanca </string>
    <string name="cafe_phone_2">05225-25454</string>
    <string name="cafe_opening_hours_2">MON&#8211;SUN: 7h30&#8211;01h00</string>
    <string name="cafe_name_3">STARBUCKS COFFEE</string>
    <string name="cafe_description_3"></string>
    <string name="cafe_web_3"></string>
    <string name="cafe_address_3">Jamaldine Villa, Casablanca \n Boulevard d\'Anfa, Casablanca 2000\n Gare ONCF Casa Port، Casablanca </string>
    <string name="cafe_phone_3">05223-85648</string>
    <string name="cafe_opening_hours_3">MON&#8211;SUN: 6h00&#8211;10h00</string>
</resources>