<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.Nabil.android.CasaForAll.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fragment_padding"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_benicassim_me_gusta"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_benicassim_me_gusta"
            android:src="@drawable/casablanca" />

    <TextView
        android:id="@+id/text_benicassim_description_p1"
        style="@style/HomeTextStyle"
        android:text="@string/home_benicassim_description_p1"/>

        <ImageView
            android:id="@+id/image_benicassim_playa"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_benicassim_playa"
            android:src="@drawable/unnamed" />

    <TextView
        android:id="@+id/text_benicassim_description_p2"
        style="@style/HomeTextStyle"
        android:text="@string/home_benicassim_description_p2"/>

        <ImageView
            android:id="@+id/image_benicassim_columbrete_islands"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_benicassim_columbrete_islands"
            android:src="@drawable/twin" />

    <TextView
        android:id="@+id/text_benicassim_description_p3"
        style="@style/HomeTextStyle"
        android:text="@string/home_benicassim_description_p3"/>

        <ImageView
            android:id="@+id/image_benicassim_paella"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_benicassim_paella"
            android:src="@drawable/ch" />

    </LinearLayout>

</ScrollView>